@@ -120,11 +120,11 @@ use constant WIRELESS_MAC_AUTH => 0b10000010;
 use constant WIRED_802_1X => 0b01100100;
 use constant WIRED_MAC_AUTH => 0b00101000;
 use constant WIRED_SNMP_TRAPS => 0b00110000;
+use constant UNKNOWN => 0b00000000;
 # masks to be used on connection types
 use constant WIRELESS => 0b10000000;
 use constant WIRED => 0b00100000;
 use constant EAP => 0b01000000;
-use constant UNKNOWN => 'Unknown';
 
 # TODO we should build a connection data class with these hashes and related constants
 # String to constant hash
@@ -145,6 +145,7 @@ use constant UNKNOWN => 'Unknown';
     WIRED_802_1X() => 'Ethernet-EAP',
     WIRED_MAC_AUTH() => 'Ethernet-NoEAP',
     WIRED_SNMP_TRAPS() => 'SNMP-Traps',
+    UNKNOWN() => '',
 );
 
 # String to constant hash
