@@ -24,6 +24,8 @@ Enhancements
 
 Bug fixes
  * Fixed nessus scans don't work with bin/pfcmd as a setuid/setgid (#1087)
+ * Fixed custom VLAN assignments relying on connection_type failing on "unknown"
+   nodes (#1231)
  * Fixed configurator.pl does not show interfaces without IP address (#1221)
 
 --------------------------------------------------------------------------------
